@@ -2,7 +2,7 @@
 Contributors: abelcheung
 Tags: music, music notation, music typesetting, score, abc, mup, lilypond, guido, pmw
 Requires at least: 2.2
-Tested up to: 2.7.1
+Tested up to: 2.9.1
 Stable tag: scorerender-0-3-0
 
 Renders inline sheet music fragments in excerpts, posts, pages and comments.
@@ -78,7 +78,7 @@ Compiling and using PMW on Windows may only be possible through code changes.
 Please visit [ScoreRender official site](http://scorerender.abelcheung.org/) for screenshots.
 
 == License ==
-This plugin is released under GPL v2.
+This plugin is released under GNU AGPL v3.
 IE Alpha Fix is released under LGPL v2.1 or later.
 Zero Clipboard is released under LGPL.
 
